# rustacles

./: Cargo.toml  README.md
brokers/: Cargo.toml  README.md
brokers/examples/: amqp_consumer.rs  amqp_producer.rs  amqp_rpc_consumer.rs  amqp_rpc_producer.rs
brokers/src/: amqp.rs  amqp_test.rs  common.rs  error.rs  errors.rs  lib.rs  redis.rs
brokers/src/redis/: message.rs  pubsub.rs  rpc.rs
brokers/src/util/: stream.rs
brokers/tests/: redis.rs
gateway/: Cargo.toml  README.md
gateway/examples/: sharder.rs
gateway/src/: constants.rs  errors.rs  lib.rs  manager.rs  queue.rs  shard.rs
models/: Cargo.toml
models/src/: channel.rs  gateway.rs  invite.rs  lib.rs  presence.rs  snowflake.rs  user.rs  voice.rs
models/src/guild/: audit_log.rs  member.rs  mod.rs  role.rs
models/src/message/: embed.rs  emoji.rs  mod.rs  webhook.rs
