[package]
name = "rustacles-brokers"
version = "0.2.0"
description = "Message brokers which allow for powerful communication between Spectacles services."
documentation = "https://docs.rs/rustacles-brokers/"
keywords = ["discord", "spec"]
authors = ["Texlo-Dev <richrancy@gmail.com>"]
repository = "https://github.com/spec-tacles/rustacles"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "1.1"
env_logger = "0.7"
log = "0.4"
nanoid = "0.3"
thiserror = "1.0"
tokio-stream = "0.1"

[dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread"]

[dev-dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread", "macros"]
