[package]
name = "rustacles-brokers"
version = "0.2.0"
description = "Message brokers which allow for powerful communication between Spectacles services."
documentation = "https://docs.rs/rustacles-brokers/"
keywords = ["discord", "spec"]
authors = ["Texlo-Dev <richrancy@gmail.com>"]
repository = "https://github.com/spec-tacles/rustacles"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = { version = "1.1", optional = true }
bytes = "1.1"
env_logger = "0.7"
futures = "0.3"
nanoid = "0.3"
pin-project = "1.0"
redust = { git = "https://github.com/appellation/redust", features = ["model", "pool"], optional = true }
rmp-serde = "0.15"
serde = "1.0"
serde_bytes = "0.11"
thiserror = "1.0"
tokio = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread", "macros"]

[features]
amqp-broker = ["lapin"]
redis-broker = ["redust"]

[[example]]
name = "amqp_consumer"
required-features = ["amqp-broker"]

[[example]]
name = "amqp_producer"
required-features = ["amqp-broker"]

[[example]]
name = "amqp_rpc_consumer"
required-features = ["amqp-broker"]

[[example]]
name = "amqp_rpc_producer"
required-features = ["amqp-broker"]
