[package]
name = "rustacles-gateway"
description = "A Spectacles Gateway library for the Discord API."
version = "0.1.0"
authors = ["Texlo-Dev <richrancy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio-native-tls = "0.1"
serde_json = "1.0"
url = "2.1"
async-native-tls = "0.3"
log = "0.4"
parking_lot = "0.10"
rustacles-model = { path = "../models" }

[dev-dependencies]
env_logger = "0.7"

[dependencies.async-tungstenite]
version = "0.6"
features = ["tokio-native-tls", "tokio-runtime"]

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.reqwest]
version = "0.10"
features = ["json"]
