[package]
name = "rustacles-model"
description = "Discord types and structures for Rustacles."
repository = "https://github.com/spec-tacles/rustacles"
version = "0.1.0"
license = "MIT"
authors = ["Texlo-Dev <richrancy@gmail.com>"]
edition = "2018"

[lib]
name = "rustacles_model"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_repr = "0.1"
